lotto -> trigger response function
